# hhimg

./: .gitignore  .gitmodules  CMakeLists.txt
img/: img_r022_c026_c1.ome.tif
lib/: build.sh
src/: config.h  main.cc
src/api/data/: abastract_pixel.h  abstract_image.h
src/hhimg/: hhimg.h  macros.h
src/hhimg/abstract/: abstract_algorithm.h  abstract_hh_algorithm.h  abstract_image_factory.h  abstract_pair_tile_algorithm.h  abstract_pixel_factory.h  abstract_tile_algorithm.h  abstract_tile_factory.h  hedgehog_algorithm.h
src/hhimg/abstract/data/: abstract_image.h  abstract_pixel.h  abstract_pixel_container.h  abstract_tile.h
src/hhimg/abstract/fast_loader/: abstract_fl_algorithm.h
src/hhimg/abstract/hh/: abstract_hh_algorithm.h  abstract_pair_tile_algorithm.h  abstract_tile_algorithm.h  tile_algorithms.h
src/hhimg/algorithm/: contrast_brightness.h  convolute.h  convolution.h  crop.h  gray_scale.h  grayscale.h  map_mutate.h  mask_applier.h  minus.h  non_maximum_suppression.h  rgb_map.h  rgb_map_mutate.h  threshold.h
src/hhimg/algorithm/fast_loader/: test_algorithm.h
src/hhimg/algorithm/tile/: copy.h  create_tmp_tiles.h  ghost_region_state.h  make_pair.h  pair_graph.h  split.h  stencil_state.h  stencil_state_manager.h  tmp_tiles_graph.h  update_stencil_task.h  update_stencils_graph.h  update_stencils_state.h  update_stencils_state_manager.h  update_stencils_task.h  wire.h
src/hhimg/algorithm/tile/minus/: minus_state.h  minus_state_manager.h  minus_wrapper.h
src/hhimg/algorithm/tile/split_graph/: split_graph.h  split_state.h  split_task.h
src/hhimg/common/: abstract_image.h  abstract_pixel_container.h  mask.h  pixel.h
src/hhimg/concrete/: chain_algorithm.h  fast_loader_pipeline.h  hedgehog_pipeline.h
src/hhimg/concrete/data/: fl_img.h  fl_view.h  mask.h  pixel.h  pixel_tile.h  pixel_value.h
src/hhimg/fast_loader/: operators.h
src/hhimg/fast_loader/abstract/: abstract_fl_algorithm.h  view_algorithms.h
src/hhimg/fast_loader/algorithm/: contrast_brightness.h  convolution.h  gray_scale.h  map_mutate.h  minus.h  rgb_map.h  threshold.h
src/hhimg/fast_loader/algorithm/fast_loader/: test_algorithm.h
src/hhimg/fast_loader/algorithm/views/: release_view.h
src/hhimg/fast_loader/concrete/: fast_loader_pipeline.h
src/hhimg/fast_loader/concrete/data/: fl_img.h  fl_view.h
src/hhimg/hedgehog/: helpers.h  operators.h
src/hhimg/hedgehog/abstract/: abstract_hh_algorithm.h  abstract_tile_factory.h  tile_algorithms.h
src/hhimg/hedgehog/abstract/data/: abstract_tile.h
src/hhimg/hedgehog/algorithm/: contrast_brightness.h  convolution.h  gray_scale.h  map_mutate.h  minus.h  threshold.h
src/hhimg/hedgehog/algorithm/tile/: copy.h  create_tmp_tiles.h  tmp_tiles_graph.h
src/hhimg/hedgehog/algorithm/tile/minus/: minus_state.h  minus_state_manager.h  minus_wrapper.h
src/hhimg/hedgehog/algorithm/tile/split_graph/: split_graph.h  split_state.h  split_task.h
src/hhimg/hedgehog/algorithm/tile/update_borders/: update_stencils_graph.h  update_stencils_state.h  update_stencils_state_manager.h  update_stencils_task.h
src/hhimg/hedgehog/concrete/: hedgehog_pipeline.h  hedgehog_sub_pipeline.h
src/hhimg/hedgehog/concrete/data/: pixel_tile.h
src/hhimg/sequential/: operators.h
src/hhimg/sequential/abstract/: abstract_algorithm.h  abstract_image_factory.h
src/hhimg/sequential/abstract/data/: abstract_pixel_container.h
src/hhimg/sequential/algorithm/: contrast_brightness.h  convolution.h  crop.h  gray_scale.h  map_mutate.h  minus.h  rgb_map.h  threshold.h
src/hhimg/sequential/concrete/: chain_algorithm.h
src/hhimg/sequential/concrete/data/: pixel.h
src/hhimg/tools/: algorithm_operators.h  concepts.h  image_operators.h  null_type.h  perf_recorder.h  pixel_operators.h  shared_ptr_operators.h  utils.h
src/hhimg/tools/hhutils/: identity_state.h  trigger_state.h
src/impl/cimg/: cimg.cc  cimg.h  cimg_image.cc  cimg_image.h  cimg_image_factory.h  cimg_pixel.h  cimg_tile.cc  cimg_tile.h  cimg_tile_factory.cc  cimg_tile_factory.h  safe_cimg.h
src/impl/tiff_fl/: grayscale_tiff_tile_loader.h  grayscale_tiff_tile_writer.h
tests/: hhimg_test.cc  test_image.h  test_pixel.h
tests/test_impl/: rgb_value.h  test_image.h  test_image_factory.h
